cluster/web/scrutiny/scrutiny-web.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scrutiny
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.k.marx.katowice.pl/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.k.marx.katowice.pl/oauth2/start
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/AnalogJ/scrutiny/master/webapp/frontend/src/assets/images/logo/scrutiny-logo-dark.png"
    forecastle.stakater.com/network-restricted: "true"
spec:
  rules:
  - host: scrutiny.k.marx.katowice.pl
    http:
      paths:
      - backend:
          serviceName: scrutiny
          servicePort: 80
        path: /
  tls:
  - hosts:
    - scrutiny.k.marx.katowice.pl
---
kind: Service
apiVersion: v1
metadata:
  name: scrutiny-web
  namespace: web
spec:
  selector:
    app: scrutiny
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrutiny
  namespace: web
spec:
  selector:
    matchLabels:
      app: scrutiny
  replicas: 1
  template:
    metadata:
      labels:
        app: scrutiny
    spec:
      volumes:
        - name: tz-config
          hostPath:
            path: /etc/localtime
      containers:
        - name: scrutiny
          image: analogj/scrutiny:v0.3.5-web
          ports:
            - containerPort: 8080
              name: http-api
          volumeMounts:
            - mountPath: "/etc/localtime"
              readOnly: true
              name: tz-config
